<resources>
    <string name="app_name">Taxiii</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="email_hint">Email</string>
    <string name="sign_in_hint">Sign in</string>
    <string name="sign_in_text">Sign in</string>
    <string name="login_social_hint">Or login with your socials</string>
    <string name="backendUrl">http://localhost:8080</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_taxi_driver_map">TaxiDriverMapActivity</string>
    <string name="title_location_permission">Location needed</string>
    <string name="text_location_permission">Taxiii needs your location</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ok">OK</string>
    <string name="user_is_authenticated">User is authenticated</string>
    <string name="name_icon">name icon</string>
    <string name="number_icon">number icon</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="gender_icon">gender_icon</string>
    <string name="gender">Gender</string>
    <string name="date_icon">date icon</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_icon">email icon</string>
    <string name="username">username</string>
    <string name="back_icon">back icon</string>
    <string name="title_activity_taxi_driver_map2">TaxiDriverMapActivity2</string>
    <string name="where_do_you_want_to_go">Where do you want to go ?</string>
    <string name="logout">logout</string>
    <string name="return_back">return back</string>
    <string name="request_taxi">request taxi</string>
    <string name="log_out">Log Out</string>
    <string name="get_request_location">get request location</string>
</resources>