<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBlue"
    tools:context=".LoginFormActivity">

    <TextView
        android:id="@+id/signinTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/sign_in_hint"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="342dp"
        android:layout_height="64dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/email"
        android:drawablePadding="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/inter_black"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinTV"
        app:layout_constraintVertical_bias="0.615" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="342dp"
        android:layout_height="64dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="15dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_black"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingHorizontal="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
        tools:layout_editor_absoluteY="373dp" />


    <TextView
        android:id="@+id/forgotPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordTV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTV" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/fab_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/google"
        android:text="google"
        android:textColor="#000000"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinButton"
        app:layout_constraintVertical_bias="0.555" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"

        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinButton"
        app:layout_constraintVertical_bias="0.555" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"

        android:src="@drawable/twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinButton"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/socialsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_social_hint"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fab_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinButton" />

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Button"-->
<!--        tools:layout_editor_absoluteX="55dp"-->
<!--        tools:layout_editor_absoluteY="604dp" />-->
</androidx.constraintlayout.widget.ConstraintLayout>




